package fr.utt.lo02;

public class Main {
    public static void main(String[] args) {
        System.out.println("Hello, World!");
    }
}