package fr.utt.lo02.core;
public class Game {

}
