package fr.utt.lo02.core.components;

public class Sector {
    private int id;
}
