classDiagram
    class Main {
        +main()
    }

    class Main {

    }

    class Player {

    }

    class Game {
        -instance : Game$
        -players:List~Player~
        -turn : int
        -playing_player: Player
        -can_player_input : bool
        %% can we play or do we have to wait ? (for multithreading)
        +getInstance() Game
        +startGame(List~Player~)
        +play()
    }
    Main "1" o-- "0..1" Game

    class Sector {
        -systems:List~System~
        %% +generate()void*
    }
    class Border_sector {
        +generate()void
    }
    Sector <|-- Border_sector
    class Middle_sector {
        +generate()void
    }
    Sector <|-- Middle_sector
    class Center_sector {
        +generate()void
    }
    Sector <|-- Center_sector

    class Map {
        -sectors:Array[][]~Sector~
        +generate()void
        +get_neighbours(System)List~System~
    }

    %% attention il y a un nombre précis en fonction du type de secteur dans map !
    Map *-- "9" Sector

    class System{
        -x:float
        -y:float
        -level:int
        %% je le mets pas ici parce qu'on a besoin de la pos globale (pas celle relative au secteur)
        %% +get_neighbours()System
    }
    Sector *-- System